# TestoAI

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  sample_output.txt  train.py
.devcontainer/: devcontainer.json
src/testoai/: cli.py  recommend.py
