[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "testoai"
version = "0.1.0"
description = "Food recommender using autoencoder embeddings + cosine similarity"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Damian Martinez" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
testoai = "testoai.cli:main"
